# Functional_4

./: README.md  haskell-lab4.cabal  json.cabal  package.yaml  test.json
.github/workflows/: haskell.yml
Text/: JSON.hs
Text/JSON/: Generic.hs  String.hs  Types.hs
app/: Main.hs
src/Free/: Commands.hs  Interpreter.hs
src/Text/: SimpleJSON.hs
src/Text/JSON/: Generic.hs  Types.hs
src/Text/SimpleJSON/: Derive.hs  Generic.hs  String.hs  Types.hs
tests/: GenericTest.hs  HUnit.hs  QC.hs  QuickCheckUtils.hs
tests/unit/: pattern-check-should-fail.json  pattern-check-should-pass.json  struct-pattern.json
