name:               json
version:            0.10
synopsis:           Support for serialising Haskell to and from JSON
description:
    JSON (JavaScript Object Notation) is a lightweight data-interchange
    format. It is easy for humans to read and write. It is easy for
    machines to parse and generate.  It is based on a subset of the
    JavaScript Programming Language, Standard ECMA-262 3rd Edition -
    December 1999.
    .
    This library provides a parser and pretty printer for converting
    between Haskell values and JSON.
category:           Web
license:            BSD3
license-file:       LICENSE
author:             Galois Inc.
maintainer:         Iavor S. Diatchki (iavor.diatchki@gmail.com)
Copyright:          (c) 2007-2018 Galois Inc.
cabal-version:      >= 1.8
build-type: Simple

extra-source-files:
    tests/GenericTest.hs
    tests/HUnit.hs
    tests/Makefile
    tests/Parallel.hs
    tests/QC.hs
    tests/QuickCheckUtils.hs
    tests/Unit.hs
    tests/unit/fail1.json
    tests/unit/fail10.json
    tests/unit/fail11.json
    tests/unit/fail12.json
    tests/unit/fail13.json
    tests/unit/fail14.json
    tests/unit/fail15.json
    tests/unit/fail16.json
    tests/unit/fail17.json
    tests/unit/fail18.json
    tests/unit/fail19.json
    tests/unit/fail2.json
    tests/unit/fail20.json
    tests/unit/fail21.json
    tests/unit/fail22.json
    tests/unit/fail23.json
    tests/unit/fail24.json
    tests/unit/fail25.json
    tests/unit/fail26.json
    tests/unit/fail27.json
    tests/unit/fail28.json
    tests/unit/fail29.json
    tests/unit/fail3.json
    tests/unit/fail30.json
    tests/unit/fail31.json
    tests/unit/fail32.json
    tests/unit/fail33.json
    tests/unit/fail4.json
    tests/unit/fail5.json
    tests/unit/fail6.json
    tests/unit/fail7.json
    tests/unit/fail8.json
    tests/unit/fail9.json
    tests/unit/pass1.json
    tests/unit/pass2.json
    tests/unit/pass3.json

library
  exposed-modules: Text.JSON,
                   Text.JSON.Types,
                   Text.JSON.String,
                   Text.JSON.Generic
  ghc-options:     -Wall

  build-depends:    base >=4.9 && <5, syb >= 0.3.3
                    , array
                    , containers
                    , bytestring
                    , mtl
                    , text
                    , parsec
                    , aeson
                    , unordered-containers
                    , hashable
                    , time


test-suite json-test-qc
  type: exitcode-stdio-1.0
  main-is: QC.hs

  hs-source-dirs:
      tests
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HUnit
    , parsec
    , array
    , base >=4.7 && <5
    , containers
    , json
    , bytestring
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , test-framework
    , test-framework-hunit
    , QuickCheck
    , random
    , time
    , quickcheck-instances
  default-language: Haskell2010


test-suite json-test-hunit
  type: exitcode-stdio-1.0
  main-is: HUnit.hs

  hs-source-dirs:
      tests
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HUnit
    , parsec
    , array
    , base >=4.7 && <5
    , containers
    , json
    , bytestring
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , test-framework
    , test-framework-hunit
    , QuickCheck
    , random
    , time
    , quickcheck-instances
  default-language: Haskell2010

test-suite json-test-generic
  type: exitcode-stdio-1.0
  main-is: GenericTest.hs

  hs-source-dirs:
      tests
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HUnit
    , parsec
    , array
    , base >=4.7 && <5
    , containers
    , json
    , bytestring
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , test-framework
    , test-framework-hunit
    , QuickCheck
    , random
    , time
    , quickcheck-instances
  default-language: Haskell2010
