name:               simple-json-and-freemonad
version:            0.1

cabal-version:      >= 1.8
build-type: Simple

extra-source-files:
    tests/GenericTest.hs
    tests/HUnit.hs
    tests/QC.hs
    tests/unit/fail2.json
    tests/unit/fail3.json
    tests/unit/fail4.json
    tests/unit/pass1.json
    tests/unit/pass2.json
    tests/unit/pass3.json

library
  exposed-modules: Text.SimpleJSON,
                   Text.SimpleJSON.Types,
                   Text.SimpleJSON.String,
                   Text.SimpleJSON.Generic,
                   Free.Commands,
                   Free.Interpreter
  ghc-options:     -Wall

  hs-source-dirs:
      src

  build-depends:    base >=4.5 && <4.13, syb >= 0.3.3
                    , containers
                    , bytestring
                    , mtl
                    , text
                    , parsec
                    , free
                    , derive


test-suite json-test-qc
  type: exitcode-stdio-1.0
  main-is: QC.hs

  hs-source-dirs:
      tests
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , simple-json-and-freemonad
    , tasty
    , tasty-quickcheck
    , QuickCheck
  default-language: Haskell2010


test-suite json-test-hunit
  type: exitcode-stdio-1.0
  main-is: HUnit.hs

  hs-source-dirs:
      tests
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HUnit
    , base >=4.9 && <5
    , simple-json-and-freemonad
    , tasty
    , tasty-hunit
    , test-framework-hunit
    , text
  default-language: Haskell2010

test-suite json-test-generic
  type: exitcode-stdio-1.0
  main-is: GenericTest.hs

  hs-source-dirs:
      tests
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , parsec
    , simple-json-and-freemonad
  default-language: Haskell2010
